Fix modal z-index

--- a/steward/sandbox/tiles/css/main.css
+++ b/steward/sandbox/tiles/css/main.css
@@ -24,7 +24,6 @@ nav {
 }
   .grid li {
     position: absolute;
-    z-index: 1;
     text-align: center;
     line-height: 100%;
   }
@@ -32,7 +31,7 @@ nav {
       display: none;
     }
     .grid li.waiting .device:before {
-      z-index: 999;
+      z-index: 10;
       font-family: FontAwesome;
       content: "\f021";
       position: absolute;
